...

    var label: String {
        switch self {
        case .disabled: "Disabled"
        case .unloaded: "Unloaded"
        case .waiting: "Loaded"
        case .running: "Running"
        case .failed: "Failed"
        case .unknown: "Unknown"
        }
    }

    var symbolName: String {
...
        .interactive
    ]

    init(rawValue: String) {
        switch rawValue {
        case "Standard": self = .standard
        case "Background": self = .background
        case "Adaptive": self = .adaptive
        case "Interactive": self = .interactive
        default: self = .other(rawValue)
        }
    }

...
